Added @todo items on |truncate twig calls

--- a/src/bundle/Resources/views/link_manager/edit.html.twig
+++ b/src/bundle/Resources/views/link_manager/edit.html.twig
@@ -14,6 +14,7 @@
                         { value: 'url.edit'|trans }
                     ]} %}
 
+                    {# @todo use CSS instead of |truncate #}
                     {% include '@ezdesign/parts/page_title.html.twig' with {
                         title: 'url.editing'|trans({'%url%': url.url|truncate(50) }),
                         iconName: 'link'
